--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,15 +17,57 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-            <% if @user == current_user %>
-              <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-              <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <td>
+            <% if @book.favorited_by?(current_user) %>
+              <%= link_to book_favorites_path(@book),method: :delete do %>
+                ♥<%= @book.favorites.count %>
+              <% end %>
             <% else %>
-              <td></td>
-              <td></td>
+              <%= link_to book_favorites_path(@book),method: :post do %>
+                ♡<%= @book.favorites.count %>
+              <% end %>
             <% end %>
+          </td>
+          <td>
+            コメント数:
+            <%= @book.book_comments.count %>
+          </td>
+          <% if @user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <% else %>
+            <td></td>
+            <td></td>
+          <% end %>
         </tr>
       </table>
+
+      <% @book.book_comments.each do |book_comment| %>
+        <table>
+          <td>
+            <%= link_to(book_comment.user) do %>
+              <%= image_tag book_comment.user.get_profile_image, size:"50x50" %><br>
+              <%= book_comment.user.name %>
+            <% end %>
+          </td>
+          <td>
+            <%= book_comment.comment %>
+          </td>
+          <td>
+            <% if book_comment.user == current_user %>
+              <%= link_to "Destroy",book_book_comment_path(book_comment.book, book_comment), method: :delete ,class: "btn btn-danger" %>
+            <% end %>
+          </td>
+        <% end %>
+      </table>
+      <div>
+        <%= form_with model: [@book,@book_comment] do |f| %>
+          <div class = "form-group" >
+          <%= f.text_area :comment, class: 'form-control' %><br>
+          <%= f.submit "送信" %>
+          </div>
+      <% end %>
+      </div>
     </div>
   </div>
 </div>
