--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,31 +34,11 @@
         </tr>
       </table>
 
-      <% @book.book_comments.each do |book_comment| %>
-        <table>
-          <td>
-            <%= link_to(book_comment.user) do %>
-              <%= image_tag book_comment.user.get_profile_image, size:"50x50" %><br>
-              <%= book_comment.user.name %>
-            <% end %>
-          </td>
-          <td>
-            <%= book_comment.comment %>
-          </td>
-          <td>
-            <% if book_comment.user == current_user %>
-              <%= link_to "Destroy",book_book_comment_path(book_comment.book, book_comment), method: :delete ,class: "btn btn-danger" %>
-            <% end %>
-          </td>
-        <% end %>
-      </table>
-      <div>
-        <%= form_with model: [@book,@book_comment] do |f| %>
-          <div class = "form-group" >
-          <%= f.text_area :comment, class: 'form-control' %><br>
-          <%= f.submit "送信" %>
-          </div>
-      <% end %>
+      <div id= "comment_area">
+        <%= render "book_comments/index", book: @book %>
+      </div>
+      <div class= "new_comment">
+        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
       </div>
     </div>
   </div>
